Revision history for Perl extension File::ExtAttr.

1.04 2007-05-06

    - (richdawe) OpenBSD does not support extended attributes --
                 fail the build on OpenBSD; documentation updates.

1.03 2007-04-27

    - (richdawe) Fix RT #26542: "Tests fail with taint-mode
                 and ATTR_TEST_DIR set"; also document ATTR_TEST_DIR.

    - (richdawe) Build fix for NetBSD, OpenBSD: Use strerror()
                 if strerror_r() is not available.

1.02 2007-04-06

    - (richdawe) Fix listfattr() so it works on Linux. Thanks to rafl
                 and Jonathan Rockway for the patch!
    - (richdawe) Add test cases for listfattr().
    - (richdawe) Fix warning in listfattr(), listfattrns()
                 when operating on a file handle.

1.01 2006-10-02

    - (richdawe) Fix brown paper bag bugs in MANIFEST that broke the build.

1.00 2006-10-02

    - (richdawe) Add support for Solaris 10.

    - (richdawe) Add support for File::ExtAttr::Tie on *BSD.

    - (richdawe) API change: Namespace and the create/replace flag
                 are now passed via a hash. This breaks API compatibility
                 for both File::ExtAttr and File::ExtAttr::Tie.

                 One API change remains: using exceptions rather
                 than warnings to report errors.

    - (richdawe) Fix RT #21214: "ISO C90 forbids mixed declarations
                 and code"

    NOTE: This relase has not been built or tested on Mac OS X.

0.05 2006-05-27
    - (richdawe) Add support for FreeBSD 6.0. This may also work
                 with NetBSD >= 4.0 and OpenBSD > 3.8.
    - (richdawe) All *fattr functions now take some optional flags.
    - (richdawe) Add File::ExtAttr::Tie for tied access to extattrs;
                 thanks to David Leadbeater!

0.04 2006-01-20
    - (richdawe) Add Mac OS X support; thanks to Jonathan Rockway!
    - (richdawe) Add a check to Makefile.PL for libattr's headers on Linux.