@@ -8,7 +8,21 @@
 # Test an explicitly empty namespace
 
 use strict;
-use Test::More tests => 8;
+use Test::More;
+
+BEGIN {
+  my $tlib = $0;
+  $tlib =~ s|/[^/]*$|/lib|;
+  push(@INC, $tlib);
+}
+use t::Support;
+
+if (t::Support::should_skip()) {
+  plan skip_all => 'Tests unsupported on this OS/filesystem';
+} else {
+  plan tests => 8;
+}
+
 use File::Temp qw(tempfile);
 use File::ExtAttr qw(setfattr getfattr delfattr);
 use IO::File;
